# gcn-classic-text-to-json

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  utils.py
gcn_classic_text_to_json/: __main__.py  conversion.py  utils.py
gcn_classic_text_to_json/notices/agile/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/alexis/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/amon/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/calet/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/counterpart/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/gecam/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/hete/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/integral/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/konus/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/lvc/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/maxi/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/milagro/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/moa/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/near/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/rxte/: README.md  __main__.py  conversion.py
gcn_classic_text_to_json/notices/sk_sn/: README.md  __main__.py  conversion.py
(+6 files in other folders)
