[tool.poetry]
name = "gcn-classic-text-to-json"
version = "0.1.0"
description = " Convert GCN Classic archival text notices to JSON"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
astropy = "*"
click = "^8.1.7"
gcn-kafka = "^0.3.3"
numpy = "*"
prometheus-client = "^0.20.0"
python = "^3.9"
pygcn = "^1.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
gcn-classic-text-to-json = "gcn_classic_text_to_json.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
